--- a/Education/Education.html
+++ b/Education/Education.html
@@ -75,67 +75,79 @@
         <div class="page_section">
             <div class="page_line1">
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
                 </div>
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
                 </div>
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
                 </div>
             </div>
             <div class="page_line2">
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
                 </div>
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
                 </div>
                 <div class="page_box">
-                    <div class="box_video">
-                        <video src=""></video>
-                    </div>
-                    <div class="box_content">
-                        <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                        <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
-                        <p>교육 시간: 6분</p>
-                    </div>
-                </div> 
+                    <a href="#">
+                        <div class="box_video">
+                            <video src=""></video>
+                        </div>
+                        <div class="box_content">
+                            <p class="ed_name">교육명:청년지원제도 알면? 종잣돈 모인다!</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>교육 소개: 청년지원제도에 대해 학습합니다.</p>
+                            <p>교육 시간: 6분</p>
+                        </div>
+                    </a>   
+                </div>
             </div>
             <div class="pagination d-flex justify-content-center">
                 <a class="cramps" href="#"> << </a>
