--- a/Benefit/Benefit.html
+++ b/Benefit/Benefit.html
@@ -13,118 +13,124 @@
 <body class="gangwon-font">
     <div class="display-container">
         <!-- nav section -->
-    <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
-        <div class="navbar_logo">
-            <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
-        </div>
-        <ul class="navbar_menu">
-            <li><a href="../Education/Education.html">맞춤교육</a></li>
-            <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
-            <li><a href="../Consult/Consult.html">맞춤상담</a></li>
-        </ul>
-        <ul class="navbar_login">
-            <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
-        </ul>
-        <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
-    </nav>
+        <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
+            <div class="navbar_logo">
+                <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
+            </div>
+            <ul class="navbar_menu">
+                <li><a href="../Education/Education.html">맞춤교육</a></li>
+                <li><a href="../Benefit/Benefit.html">맞춤혜택</a></li>
+                <li><a href="../Consult/Consult.html">맞춤상담</a></li>
+            </ul>
+            <ul class="navbar_login">
+                <li><a href="#">로그인<i class="fa-regular fa-user"></i></a></li>
+            </ul>
+            <a href="#" class="navbar_toggleBtn"><i class="fa-solid fa-bars"></i></a>
+        </nav>
         <!--header-->
-    <header class="header">
-        <div class="title">맞춤 혜택</div>
-        <hr/>
-        <div class="sub">
-            <form class="search_form">
-                <input class="search_education" type="text" placeholder="찾는 혜택을 검색하세요">
-                <button class="submit_education" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <input class="category_education" type="button" value="카테고리">
-            </form>
-            <img src="../img/bene_finance.png" alt="교육 이미지">
+        <div class="header_section">
+            <div class="header">
+                <p>맞춤교육</p>
+                <div class="header_line"></div>
+            </div>
+            <div class="subheader d-flex justify-content-center">
+                <p class="blue">내 상황에 맞는 혜택</p><p>이 궁금하다면?</p>
+            </div>
+            <div class="line"></div>
+            <div class="search_section">
+                <div class="search_bar">
+                    <input type="text" placeholder="키워드를 입력해주세요.">
+                </div>
+                <div class="searchBtn">
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
+                <div class="consult_img">
+                    <img src="../img/ed_education.png" alt="">
+                </div>
+            </div>
         </div>
-    </header>
+        <!--카테고리-->
+        <div class="category">
+            <section class="optional">
+                <select id="ed_target">
+                    <option>청소년</option>
+                    <option value="">전체</option>
+                    <option value="">대학생</option>
+                    <option value="">중장년</option>
+                    <option value="">시니어</option>
+                    <option value="">장애인</option>
+                    <option value="">북한이탈주민</option>
+                </select>
+            </section>
 
-    <!--카테고리-->
-    <div class="category">
-        <section class="optional">
-            <select id="ed_target">
-                <option>청소년</option>
-                <option value="">전체</option>
-                <option value="">대학생</option>
-                <option value="">중장년</option>
-                <option value="">시니어</option>
-                <option value="">장애인</option>
-                <option value="">북한이탈주민</option>
-            </select>
-        </section>
-
-        <section class="optional">
-            <select id="ed_field">
-                <option>부채관리</option>
-                <option value="">전체</option>
-                <option value="">신용관리</option>
-                <option value="">재무설계</option>
-                <option value="">소비저축</option>
-                <option value="">위험관리</option>
-                <option value="">소비생활</option>
-            </select>
-        </section>
-    </div>
-
-    <!--페이지네이션-->
-    <div class="page">
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <section class="optional">
+                <select id="ed_field">
+                    <option>부채관리</option>
+                    <option value="">전체</option>
+                    <option value="">신용관리</option>
+                    <option value="">재무설계</option>
+                    <option value="">소비저축</option>
+                    <option value="">위험관리</option>
+                    <option value="">소비생활</option>
+                </select>
+            </section>
         </div>
+        <!--페이지네이션-->
+        <div class="page">
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
 
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
+
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
+
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
+
+            <div class="section">
+                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                <p>신청 기간: 2023년 9월 25일까지</p>
+                <p>접수 기관: 관할 지자체</p>
+                <p>지원 형태: 현금</p>
+                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            </div>
+
         </div>
-
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-        </div>
-
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-        </div>
-
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-        </div>
-
-        <div class="section">
-            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-            <p>신청 기간: 2023년 9월 25일까지</p>
-            <p>접수 기관: 관할 지자체</p>
-            <p>지원 형태: 현금</p>
-            <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-        </div>
-
-    </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
