--- a/Education/Education.html
+++ b/Education/Education.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,6 +33,10 @@
                 <p>맞춤교육</p>
                 <div class="header_line"></div>
             </div>
+            <div class="subheader d-flex justify-content-center">
+                <p class="blue">내 상황에 맞는 교육</p><p>이 궁금하다면?</p>
+            </div>
+            <div class="line"></div>
             <div class="search_section">
                 <div class="search_bar">
                     <input type="text" placeholder="키워드를 입력해주세요.">
