--- a/Benefit/Benefit.html
+++ b/Benefit/Benefit.html
@@ -30,13 +30,13 @@
         <!--header-->
         <div class="header_section">
             <div class="header">
-                <p>맞춤교육</p>
+                <p>맞춤혜택</p>
                 <div class="header_line"></div>
             </div>
             <div class="subheader d-flex justify-content-center">
                 <p class="blue">내 상황에 맞는 혜택</p><p>이 궁금하다면?</p>
             </div>
-            <div class="line"></div>
+            <div class="subheader_line"><div class="line"></div></div>
             <div class="search_section">
                 <div class="search_bar">
                     <input type="text" placeholder="키워드를 입력해주세요.">
@@ -44,8 +44,8 @@
                 <div class="searchBtn">
                     <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </div>
-                <div class="consult_img">
-                    <img src="../img/ed_education.png" alt="">
+                <div class="header_img">
+                    <img src="../img/bene_finance.png" alt="">
                 </div>
             </div>
         </div>
@@ -53,8 +53,8 @@
         <div class="category">
             <section class="optional">
                 <select id="ed_target">
-                    <option>청소년</option>
-                    <option value="">전체</option>
+                    <option>서비스 분류</option>
+                    <option value="">청소년</option>
                     <option value="">대학생</option>
                     <option value="">중장년</option>
                     <option value="">시니어</option>
@@ -65,8 +65,8 @@
 
             <section class="optional">
                 <select id="ed_field">
-                    <option>부채관리</option>
-                    <option value="">전체</option>
+                    <option>전체</option>
+                    <option value="">부채관리</option>
                     <option value="">신용관리</option>
                     <option value="">재무설계</option>
                     <option value="">소비저축</option>
@@ -76,60 +76,105 @@
             </section>
         </div>
         <!--페이지네이션-->
-        <div class="page">
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+        <div class="page_section">
+            <div class="page_line1">
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">청소년</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a>   
+                </div>
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">청소년</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a>   
+                </div>
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">북한이탈주민</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a> 
+                </div>
             </div>
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <div class="page_line2">
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">청소년</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a> 
+                </div>
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">청소년</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a> 
+                </div>
+                <div class="page_box">
+                    <a href="#">
+                        <div class="box_content">
+                            <div class="smallbox">청소년</div>
+                            <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
+                            <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
+                            <ul>
+                                <li>신청 기간: 2023년 9월 25일까지</li>
+                                <li>접수 기관: 관할 지자체</li>
+                                <li>지원 형태: 현금</li>
+                            </ul>
+                        </div>
+                    </a> 
+                </div>
             </div>
-
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
+            <div class="pagination d-flex justify-content-center">
+                <a class="cramps" href="#"> << </a>
+                <a class="active" href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a class="cramps" href="#"> >> </a>
             </div>
-
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
-            <div class="section">
-                <p class="ed_name">국가지원금</p> <!-- `${js, json파일로 데이터를 가져옴}` -->
-                <p>소득과 재산이 적은 근로 소득자에게 근로소득을 지원합니다. 자녀가 있을 경우 자녀장려금을 지원합니다.</p>
-                <p>신청 기간: 2023년 9월 25일까지</p>
-                <p>접수 기관: 관할 지자체</p>
-                <p>지원 형태: 현금</p>
-                <p>신청 방법: <a href="#">타 사이트 이동<i class="fa-solid fa-arrow-up-right-from-square"></i></a></p>
-            </div>
-
+        </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
