--- a/main/index.html
+++ b/main/index.html
@@ -56,7 +56,9 @@
                     <p class="second_sub">금융이 어려운가요? 지원정책을 놓치고 계시진 않으신가요?</p>
                     <p class="category"><a href="../Category/Category.html" class="category_button">해당사항 선택</a></p>
                 </div>
-                <img src="../img/CreditCard.png" alt="신용카드">
+                <div class="credit_img">
+                    <img src="../img/CreditCard.png" alt="신용카드">
+                </div>
             </div>
 
             <div class="third">
