--- a/Consult/Consult.html
+++ b/Consult/Consult.html
@@ -11,7 +11,7 @@
 </head>
 <body class="gangwon-font">
     <div class="display-container">
-        <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
+        <nav class="navbar fixed-top">
             <div class="navbar_logo">
                 <a href="../main/index.html"><img src="../img/logo.png" alt="브랜드로고"></a>
             </div>
