--- a/Consult/Consult_Content/CC.html
+++ b/Consult/Consult_Content/CC.html
@@ -12,7 +12,7 @@
 <body class="gangwon-font">
     <div class="display-container">
         <!-- navigation section -->
-        <nav class="navbar fixed-top d-flex justify-content-between align-items-center">
+        <nav class="navbar fixed-top">
             <div class="navbar_logo">
                 <a href="../../main/index.html"><img src="../../img/logo.png" alt="브랜드로고"></a>
             </div>
